SUBDIRS = bitextor
DIST_SUBDIRS = $(GENERIC_LIBRARY_NAME)
EXTRA_DIST = autogen.sh resources/langguesser/urllgparam \
             resources/langguesser/trigramlgparam \
             resources/langguesser/wordlgparam \
             resources/elperiodico.txt \
             resources/xmlresources/xhtml.dtd \
             resources/xmlresources/isonum.ent \
             resources/xmlresources/isolat1.ent \
             resources/xmlresources/isolat2.ent \
             resources/xmlresources/conf.dtd \
             resources/xmlresources/isopub.ent \
             resources/xmlresources/psbr2.dtd \
             resources/xmlresources/psbr.dtd \
             resources/bitextor.cfg \
             resources/urlgeneration/urlpatterns \
             scripts/downloadpage.sh \
             scripts/downloadandcacheserverpage.sh \
             scripts/downloadandcachepage.sh
             