nonbreaking_prefixesdir = $(prefix)/share/bitextor/utils/nonbreaking_prefixes

# Add new nonbreaking_prefixes.
nonbreaking_prefixes_DATA = nonbreaking_prefix.ar nonbreaking_prefix.de \
                            nonbreaking_prefix.en nonbreaking_prefix.es \
                            nonbreaking_prefix.fr nonbreaking_prefix.ba \
                            nonbreaking_prefix.ca
